# math-school

./: .gitignore  01-paper.md  README.md  myst.yml  out.xml  p2.md  pyproject.toml  requirements.txt  temp_page.html
algebra/: factors.md  fractions.md
combinatorics/: ch0.md  ch1-three-different-problems.md  ch2-multiplication-principle.md  ch3-word-games.md
misc/: 01-paper.md  README.md  p2.md
old/chalenge/: equation.md
old/factors/: common-factors.md  commutative.md  topic-example.json  topic.json
old/fractions/: division.json  division.md  equations.md  equations1.md  mix-problems.md  t0.json  t0.md  t1.json  t1.md
old/negatives/: negatives-journey.md  negatives.md
old/powers/: t1.md
old/proportions/: t2.json  t3.md  t4.md  topic.json  topic.md
